--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,60 @@
-asgiref==3.7.2
+anyio==3.6.2
+asgiref==3.5.2
 beautifulsoup4==4.12.2
-certifi==2023.5.7
-cloudinary==1.33.0
+cachetools==5.2.0
+certifi==2021.10.8
+cffi==1.15.1
+charset-normalizer==2.1.0
+cloudinary==1.30.0
 confusable-homoglyphs==3.2.0
-Django==4.2.1
+cryptography==37.0.4
+cssselect==1.2.0
+cssutils==2.6.0
+dj-database-url==0.5.0
+Django==4.1.5
+django-appconf==1.0.5
 django-bootstrap4==23.1
-django-crispy-forms==1.13.0
+django-cors-headers==3.13.0
+django-crispy-forms==1.14.0
+django-imagekit==4.1.0
+django-on-heroku==1.1.2
 django-registration==3.3
-mysqlclient==2.1.1
-python-decouple==3.8
+django-simple-mail==2.3.5
+django-tinymce==3.4.0
+django-utils-six==2.0
+djangorestframework==3.14.0
+djangorestframework-pagination==1.1
+djangorestframework-simplejwt==5.2.2
+dnspython==2.2.1
+email-validator==1.3.0
+gunicorn==20.1.0
+h11==0.14.0
+html2text==2020.1.16
+httpcore==0.16.3
+httpx==0.23.1
+idna==3.4
+lxml==4.9.2
+pilkit==2.0
+Pillow==9.3.0
+premailer==3.10.0
+psycopg2-binary==2.9.5
+pycodestyle==2.7.0
+pycparser==2.21
+pydantic==1.10.2
+PyJWT==2.7.0
+python-dateutil==2.8.2
+python-decouple==3.5
+pytz==2022.6
+pyuploadcare==3.1.0
+requests==2.28.1
+rfc3986==1.5.0
 six==1.16.0
-soupsieve==2.4.1
-sqlparse==0.4.4
-typing_extensions==4.6.2
-tzdata==2023.3
-urllib3==1.26.16
+sniffio==1.3.0
+soupsieve==2.2.1
+sqlparse==0.4.2
+toml==0.10.2
+typing_extensions==4.4.0
+tzdata==2022.7
+urllib3==1.26.7
+whitenoise==6.2.0
+zipp==3.6.0
